assets/css/style.css
@import url(http://fonts.googleapis.com/css?family=Inconsolata);
@import url(http://fonts.googleapis.com/css?family=Merriweather+Sans:300);

h1,h2,h3,h4,h5,h6 {
  font-family: 'Inconsolata', sans-serif;
  margin-bottom: 0;
}

html,
body {
  height: 100%;
  font-family: 'Merriweather Sans', sans-serif;
  font-size: 12px;
}

.post-header {
  position: relative;
}
.post-date {
  position: absolute;
  left: -50px;
  width: 40px;
  text-align: center;
  padding-right: 5px;
  border-right: 1px solid #ccc;
}
.post-attr {
  margin-top: -10px;
  font-size: 11px;
}
.post-footer {
  border-top: 1px solid #ccc;
}

.wrapper {
  min-height: 100%;
  margin: 0 auto -30px;
}

.push,
footer {
  height: 30px;
}

.nav-links {
 margin-top: 15px;
}
.nav-links > a {
  margin: 0 12px;
  color: #999;
}

.nav-links > a.selected {
  color: #08c;
}

.nav-imgs {
  padding: 0 10px;
  margin-top: -10px;
}

.nav-imgs > a {
  margin: 0 2px;
}

.avatar img {
  border: 4px solid #fff;
  box-shadow: 0 2px 4px #ccc;
}
.recent-side {
  font-size: 10px;
}
.recent {
  margin-top: 4%;
}
.recent .row-fluid {
  border-top: 1px solid #999;
}

.main {
  margin-top: 6%;
}

@media (max-width: 767px) {
  .footer {
    margin-left: -20px;
    margin-right: -20px;
    padding-left: 20px;
    padding-right: 20px;
  }
}

